src/test/rustdoc-ui/invalid-keyword.rs
#![feature(doc_keyword)]

#[doc(keyword = "foo df")] //~ ERROR
mod foo {}
